import logging
from typing import List, Dict, Optional, Any, Tuple

# import aioredis # Will be imported when Redis client is properly typed
from .config import SWMConfig
from generated_grpc import kem_pb2, glm_service_pb2 # For KEMQuery type hint

logger = logging.getLogger(__name__)

class RedisKemCache:
    """
    A KEM cache implementation using Redis as a backend.
    This class will encapsulate all Redis interactions for KEM storage,
    indexing, LRU-like eviction (via Redis policies), and retrieval.
    """
    def __init__(self, redis_client: Any, config: SWMConfig): # redis_client type will be aioredis.Redis
        """
        Initializes the RedisKemCache.
        :param redis_client: An initialized aioredis.Redis client instance.
        :param config: SWMConfig instance for accessing configuration like indexed keys.
        """
        self.redis = redis_client
        self.config = config
        self.indexed_keys: Set[str] = set(config.INDEXED_METADATA_KEYS)

        # Define Redis key prefixes
        self.kem_key_prefix = "kem:"
        self.index_meta_key_prefix = "idx:meta:"
        self.index_date_created_key = "idx:date:created_at"
        self.index_date_updated_key = "idx:date:updated_at"

        logger.info(f"RedisKemCache initialized. Indexed metadata keys: {self.indexed_keys}")

    async def get(self, kem_id: str) -> Optional[kem_pb2.KEM]:
        """
        Retrieves a KEM from Redis by its ID.
        Deserializes from Redis Hash.
        """
        logger.debug(f"RedisKemCache: GET KEM ID '{kem_id}'")
        # TODO: Implement HGETALL for kem_key_prefix + kem_id
        # TODO: Deserialize from hash fields to kem_pb2.KEM object
        #       - metadata from JSON string
        #       - content from bytes
        #       - embeddings from serialized bytes
        #       - timestamps from ISO strings
        await asyncio.sleep(0.01) # Simulate async I/O
        raise NotImplementedError("RedisKemCache.get() not yet implemented.")
        # return None

    async def set(self, kem_id: str, kem: kem_pb2.KEM) -> None:
        """
        Stores or updates a KEM in Redis.
        Serializes KEM fields into a Redis Hash.
        Atomically updates secondary indexes (metadata, dates) using MULTI/EXEC.
        """
        logger.debug(f"RedisKemCache: SET KEM ID '{kem_id}'")
        # TODO: Implement MULTI/EXEC transaction:
        #   1. (If update) Read old KEM metadata/dates for index cleanup (or pass old_kem as param)
        #   2. SREM/ZREM kem_id from old index entries
        #   3. HMSET for kem_key_prefix + kem_id with serialized KEM fields
        #   4. SADD/ZADD kem_id to new index entries
        await asyncio.sleep(0.01) # Simulate async I/O
        # raise NotImplementedError("RedisKemCache.set() not yet implemented.")
        pass # Allow flow for now

    async def delete(self, kem_id: str) -> bool:
        """
        Deletes a KEM from Redis and its entries from secondary indexes.
        Uses MULTI/EXEC for atomicity.
        Returns True if KEM was deleted, False otherwise.
        """
        logger.debug(f"RedisKemCache: DELETE KEM ID '{kem_id}'")
        # TODO: Implement MULTI/EXEC transaction:
        #   1. HGETALL or HMGET to get metadata/dates of KEM to be deleted (for index cleanup)
        #   2. SREM/ZREM kem_id from all relevant index entries
        #   3. DEL kem_key_prefix + kem_id
        #   Return result of DEL (number of keys deleted) > 0
        await asyncio.sleep(0.01) # Simulate async I/O
        # raise NotImplementedError("RedisKemCache.delete() not yet implemented.")
        return True # Allow flow for now

    async def contains(self, kem_id: str) -> bool:
        """
        Checks if a KEM exists in Redis.
        """
        logger.debug(f"RedisKemCache: CONTAINS KEM ID '{kem_id}'")
        # TODO: Implement EXISTS for kem_key_prefix + kem_id
        await asyncio.sleep(0.01) # Simulate async I/O
        # raise NotImplementedError("RedisKemCache.contains() not yet implemented.")
        return False # Allow flow for now, will make _put_kem_to_cache think it's always new

    async def query_by_filters(
        self,
        query: glm_service_pb2.KEMQuery,
        page_size: int,
        page_token: Optional[str] # For Redis, page_token will likely be a SCAN cursor
    ) -> Tuple[List[kem_pb2.KEM], str]:
        """
        Queries KEMs from Redis based on filters in KEMQuery.
        Supports filtering by IDs, indexed metadata, and date ranges.
        Implements pagination suitable for Redis (e.g., SCAN-based or keyset).
        """
        logger.debug(f"RedisKemCache: QUERY KEMs with filters: {query}, page_size: {page_size}, page_token: {page_token}")
        # TODO: Implement complex filtering logic:
        #   1. Parse query.ids, query.metadata_filters, query.created_at_start/end, query.updated_at_start/end
        #   2. Build Redis commands for fetching IDs from indexes (SMEMBERS, ZRANGEBYSCORE)
        #   3. Intersect/Union resulting ID sets (SINTERSTORE, SUNIONSTORE or client-side)
        #   4. Implement pagination over the final set of IDs (e.g., using client-side slicing if IDs fit in memory,
        #      or more complex server-side pagination with Lua or by materializing sorted IDs in a temp key).
        #      For very large result sets, simple offset pagination is bad. SCAN-like iteration or keyset pagination is better.
        #   5. For IDs on the current page, HGETALL for each KEM.
        #   6. Deserialize and return List[kem_pb2.KEM] and next_page_token.
        await asyncio.sleep(0.01) # Simulate async I/O
        # raise NotImplementedError("RedisKemCache.query_by_filters() not yet implemented.")
        return [], "" # Return empty for now to allow flow

    # --- Helper methods for (de)serialization can be added here ---
    # async def _serialize_kem_for_hash(self, kem: kem_pb2.KEM) -> Dict[str, Any]: ...
    # async def _deserialize_kem_from_hash(self, kem_hash_data: Dict[bytes, bytes]) -> Optional[kem_pb2.KEM]: ...
    # async def _update_metadata_indexes(self, kem_id: str, old_metadata: Dict[str,str], new_metadata: Dict[str,str], pipe: aioredis.Pipeline): ...
    # async def _update_date_indexes(self, kem_id: str, old_kem: Optional[kem_pb2.KEM], new_kem: kem_pb2.KEM, pipe: aioredis.Pipeline): ...

logger.info("RedisKemCache module loaded.")
```
